[project]
name = "finalteleco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
]
